Fix buttons on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -216,7 +216,7 @@ a {
   color: inherit;
   display: inline-block;
   font-weight: 900;
-  margin-inline: 0.5em;
+  margin: 0.25em 0.5em;
   padding: 1em 2em;
   text-align: center;
   text-decoration: none;
